Fixed horizontal scrollbar issue for mobile devices.

--- a/src/styles.css
+++ b/src/styles.css
@@ -220,4 +220,6 @@ body.mobile-view {
   visibility: hidden;
   height: 0px !important;
   width: 0px !important;
+  left: 0px !important;
+  top: 0px !important;
 }
